# einvoice-processing

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  fastmcp_help.txt  final_test_result.txt  final_test_result_utf8.txt  invoices.db  match_result.json  mismatch_result.json  out.json  out.txt  out_utf8.json  pip_log.txt  pyproject.toml  sync_out.txt  sync_out_utf8.txt  test_debug_output.txt  test_human_review_output.txt  test_invoices.db  test_out.txt  test_output.txt  test_output2.txt  test_output_utf8.txt  test_policy_results.txt
agents/: audit_agent.py  graph.py  human_review_agent.py  ingestion_agent.py  processing_agent.py  state.py  utils.py  validation_agent.py
api/: database.py  main.py  schemas.py
chroma_db/: chroma.sqlite3
human-review-ui/: index.html  package-lock.json  package.json
human-review-ui/src/: App.jsx  (+1 more)
mcp_erp_server/: erp_data.db  erp_data.db-shm  erp_data.db-wal  erp_database.py  models.py  server.py
scripts/: analyze_test_logs.py  check_host_connectivity.py  check_llm.py  check_ollama.py  create_test_pdfs.py  diag_erp_insert.py  generate_policy_test_invoices.py  generate_sample_pdfs.py  migrate_confidence_score.py  reinit_db.py  run_test.py  seed_erp.py  seed_notification.py  seed_perfect_invoice.py  seed_suppliers.py  sync_db.py  test_agent_response.py  test_agent_response2.py  test_audit_only.py  test_erp_comments.py  test_human_review.py  test_qwen_ingestion.py  test_retrieval.py  test_val_agent.py
tests/: test_graph.py  test_mcp_erp_server.py  test_validation_agent.py
uploads/: bad_invoice.txt  sample_invoice.txt
(+1 files in other folders)
